# econci

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
complexity/: complexity.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
econci/: __init__.py  complexity.py  utils.py
tests/: __init__.py  conftest.py  test_econci.py
