[tool.poetry]
name = "econci"
version = "0.1.3"
description = ""
authors = ["phcsoares <phcastrosoares@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=0.25.0"
networkx = ">=2.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
twine = "^3.4.2"
pytest-cov = "^3.0.0"
towncrier = "^21.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
